[tool.poetry]
name = "jonxhikari"
version = "0.7.3"
description = "Discord bot written in python with Hikari."
authors = ["Jonxslays"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.10"
aiohttp = "3.7.4.post0"
APScheduler = "3.7.0"
distro = "1.5.0"
hikari-lightbulb = "1.3.0"
psutil = "5.8.0"
pygount = "1.2.4"
python-dotenv = "0.17.1"
uvloop = "0.15.2"
hikari = {version = "2.0.0.dev102", extras = ["speedups"]}
hikari-tanjun = "2.0.0-alpha.4"
asyncpg = "^0.24.0"
aiofiles = "^0.7.0"
websockets = "^10.0"
black = "^21.7b0"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
